--- a/style.css
+++ b/style.css
@@ -42,6 +42,21 @@
         font-size:5vw;
         height:6vw;
     }
+    .message.dataChat {
+    background-color: white;
+    border-radius: 5px;
+    width: fit-content;
+    font-size: 23px;
+    color: black;
+    display: flex;
+    align-self: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+    max-width: 25%;
+    word-wrap: break-word;
+    font-family: poppins , sans-serif;
+    margin: 20px;
+}
 }
 .navbar {
     background-color: black;
@@ -328,4 +343,5 @@ h3 {
 
 .logout.active p {
     display: block;
+
 }
