--- a/style.css
+++ b/style.css
@@ -8,7 +8,40 @@
     .box1 {
         width: 40%;
     }
+    
+    .message.user {
+    background-color: white;
+    border-radius: 5px;
+    width: fit-content;
+    font-size: 13px;
+    color: black;
+    display: flex;
+    align-self: flex-end;
+    justify-content: flex-end;
+    text-align: right;
+    max-width: 50%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    font-family: poppins , sans-serif;
+    margin: 20px;
+}
 
+.message.dataChat {
+    background-color: white;
+    border-radius: 5px;
+    width: fit-content;
+    font-size: 13px;
+    color: black;
+    display: inline;
+    align-self: flex-start;
+    justify-content: flex-start;
+    text-align: left;
+    max-width: 50%;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    font-family: poppins , sans-serif;
+    margin: 20px;
+}
     .micAndSendBtn {
         display: flex;
         gap: 5px;
@@ -331,3 +364,4 @@ h3 {
 .logout.active p {
     display: block;
 }
+
